# pi-zero-meter-gateway

./: .bandit  .env.example  .gitignore  .pre-commit-config.yaml  CLEANUP_AUDIT_REPORT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES_v1.2.0.md  docker-compose.yml  logging.yaml  meterhub_version.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: meterhub-expert.agent.md
.github/workflows/: build_release.yml  test.yml
acquisition/: __init__.py  meterhub-acquisition.service  requirements.txt
acquisition/meterhub_acq/: __init__.py  __main__.py  main.py
acquisition/tests/: __init__.py  test_acquisition.py  test_acquisition_fault_injection.py
common/: __init__.py  requirements.txt
common/meterhub_common/: __init__.py  aws_mqtt_client.py  https_uploader.py  image_signer.py  mender_boot_manager.py  meter_profile_schema.py  modbus_client.py  models.py  sqlite_db.py
common/meterhub_common/modbus_profiles/: __init__.py
docker/: mosquitto.conf
docs/: ARCHITECTURE.md  COMMISSIONING.md  METER_PROFILES.md  PHASE_5_OTA_STRATEGY.md  PHASE_6_IMAGE_BUILDER.md  QUICK_REFERENCE.md  STRUCTURE.md
docs/guides/: CONTRIBUTING.md  DEV_SETUP.md  INSTALLATION.md  INSTALLATION_INDIA_EXTENDED.md  INSTALLATION_SOUTHEAST_ASIA.md  README.md  TROUBLESHOOTING_RUNBOOK.md
docs/hardware/: BOM.md  README.md
docs/project/: AUDIT_REPORT.md  CLEANUP_AUDIT.md  CODE_REVIEW_FIXES_COMPLETED.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_CODE_REVIEW.md  PHASE_1_COMPLETE.md  PHASE_1_SUMMARY.md  PHASE_1_VERIFICATION.md  PHASE_6_COMPLETION.md  PHASE_6_MANIFEST.md  PROJECT_REVIEW_COMPLETE.md  README.md  RELEASE_NOTES.md  TODO_STATUS.md
docs/specifications/: CLOUD_API_CONTRACT.md  PRODUCTION_SPEC.md  README.md
installer_ui/: __init__.py  meterhub-installer-ui.service  requirements.txt
installer_ui/meterhub_ui/: __init__.py  app.py  meter_tester.py  network_manager.py  qr_code_generator.py
installer_ui/tests/: __init__.py  test_installer_ui.py
meterhub_client/: README.md  __init__.py  client.py  setup.py
ota/: __init__.py  meterhub_ota_manager.py
ota/meterhub_ota_manager/: __init__.py
ota/tests/: __init__.py  test_ota.py
performance/: __init__.py  acquisition_optimizations.py  performance_profiler.py  power_optimization.py  ui_optimizations.py  uploader_optimizations.py
profiles/: japsin-jii-bhi-electromagnetic-flowmeter.yaml  schneider-em6400.yaml
scripts/: install-dev.sh
tests/: __init__.py  conftest.py  test_models.py
uploader/: __init__.py  meterhub-uploader.service  requirements.txt
uploader/meterhub_uploader/: __init__.py  __main__.py  main.py
uploader/tests/: __init__.py  test_uploader.py
