[tool.poetry]
name = "meterhub"
version = "1.2.0"
description = "Production-grade firmware stack for Raspberry Pi Zero W edge gateway reading 3-phase CT meters via RS485/Modbus RTU"
authors = ["MeterHub Team"]
license = "Proprietary"
readme = "README.md"
packages = [
    { include = "meterhub_acq", from = "acquisition" },
    { include = "meterhub_uploader", from = "uploader" },
    { include = "meterhub_ui", from = "installer_ui" },
    { include = "meterhub_common", from = "common" },
    { include = "meterhub_ota_manager", from = "ota" },
    { include = "meterhub_build_manager", from = "build" },
]

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = "^2.0.0"
pyyaml = "^6.0"
pymodbus = "^3.6.0"
paho-mqtt = "^1.6.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
cryptography = "^41.0.0"
PyNaCl = "^1.5.0"
boto3 = "^1.28.0"
python-dotenv = "^1.0.0"
aiohttp = "^3.9.0"
aiofiles = "^23.2.0"
qrcode = "^7.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
autoflake = "^2.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23"
pytest-mock = "^3.11.1"
httpx = "^0.24.0"
black = "25.1.0"
flake8 = "^7.0"
mypy = "^1.13"
bandit = "^1.7.5"
types-PyYAML = "^6.0.12"
types-aiofiles = "^25.1.0"
autotyping = "^24.9.0"
pre-commit = "^4.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["pymodbus.*"]
disallow_untyped_calls = false

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests", "acquisition/tests", "uploader/tests", "installer_ui/tests", "ota/tests", "build/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
